crates/plotnik-lib/tests/02-parser/recovery_validation/named_def_missing_equals.txt
Expr (identifier)
==== diagnostics ====
error: references must be parenthesized
 --> query.ptk:1:1
  |
1 | Expr (identifier)
  | ^^^^
  |
help: wrap in parentheses
  |
1 - Expr (identifier)
1 + (Expr) (identifier)
  |
